@@ -1,3 +1,5 @@
+* Make hide/show of the treay one button #3475 (erikos)
+
 52
 
 * Fix for when participant leaves (erikos)
